[package]
name = "starkyx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["plonky2", "parallel", "std", "timing"]
parallel = ["plonky2/parallel", "plonky2_maybe_rayon/parallel"]
std = ["anyhow/std", "plonky2/std", "num/std"]
timing = ["plonky2/timing"]

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false }
log = { version = "0.4.14", default-features = false }
plonky2_maybe_rayon = { version = "0.2.0", default-features = false }
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git", tag = "v0.2.0", default-features = false, optional = true }
num = { version = "0.4", default-features = false }
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
subtle-encoding = "0.5.1"
bincode = "1.3.3"
curve25519-dalek = "4"
env_logger = "0.9.0"

[dev-dependencies]
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git", tag = "v0.2.0", features = [
    "gate_testing",
] }
env_logger = { version = "0.9.0", default-features = false }
rand = "0.8.4"
num = { version = "0.4", features = ["rand"] }
criterion = { version = "0.4", features = ["html_reports"] }
pprof = { version = "0.11", features = ["criterion", "flamegraph"] }
seq-macro = "0.3.3"
